# Wumpus-World

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/models/: training_metrics.json
data/maps/: example.txt  pit_trap.txt
data/maps/test_suite/: 01_easy_map_01.txt  01_easy_map_02.txt  01_easy_map_03.txt  01_easy_map_04.txt  02_pit_heavy_map_01.txt  02_pit_heavy_map_02.txt  02_pit_heavy_map_03.txt  02_pit_heavy_map_04.txt  03_wumpus_hazard_map_01.txt  03_wumpus_hazard_map_02.txt  03_wumpus_hazard_map_03.txt  03_wumpus_hazard_map_04.txt  04_gold_hunter_map_01.txt  04_gold_hunter_map_02.txt  04_gold_hunter_map_03.txt  04_gold_hunter_map_04.txt  05_hard_complex_map_01.txt  05_hard_complex_map_02.txt  05_hard_complex_map_03.txt  05_hard_complex_map_04.txt
data/processed/: dataset.npz  metadata.json
docs/: PROJECT_CONTEXT.md  PROJECT_REPORT.md  ROADMAP.md  SPEC.md  TASKBOOK.md
results/: benchmark_results.csv
src/wumpus/: __main__.py  cli.py  dataset.py  domain.py  encoder.py  engine.py  generator.py  knowledge.py  ml.py  observation.py  parser.py  runner.py  search.py
src/wumpus/agents/: __init__.py  base.py  greedy_agent.py  ml_agent.py  random_agent.py  rule_agent.py  search_agent.py
src/wumpus/evaluation/: __init__.py  benchmark.py  suite_generator.py
tests/: test_benchmark.py  test_domain.py  test_engine.py  test_ml.py  test_observation.py  test_parser.py  test_rules.py  test_search.py
tests/fixtures/: GOLDEN_EXAMPLES.md  golden1_straight.txt  golden2_pit.txt  golden3_complex.txt
