[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wumpus-world"
version = "0.1.0"
description = "A modular Wumpus World project for comparing AI methods"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24,<2.5",
  "scikit-learn>=1.3,<2",
  "joblib>=1.3,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<8",
  "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-config --strict-markers"
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.coverage.run]
source = ["wumpus"]
omit = [
  "*/wumpus/__main__.py",
  "*/wumpus/cli.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
